# cwb_fabric_pipeline

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
SJD_mains/bronze/: main_bronze_SJD.py
bll/helpers/: DDB_runner.py  guard.py  log_writer.py  path_maker_temp.py  spark_session.py
bll/jobs_def/: add_technicals.py  clean_cols_names.py  export_data.py  ingest_data.py  remap_cols_names.py
bll/jobs_luncher/: bronze_lunch.py  (+2 more)
configuration/: bronze_configuration.py  configuration.py  gold_configuration.py  landing_zone_configuration.py  logging_configuration.py  silver_configuration.py  technicals_configuration.py  tests_configuration.py
cwb_bronze_layer/: README.md  pyproject.toml
cwb_bronze_layer/_local_files/_temp_sink/bronze_lakehouse/Tables/claimcenter/initial_load/ready/cc_claim/: .part-00000-8aa81dd5-4402-4850-936d-55adc860573e-c000.snappy.parquet.crc  .part-00001-213c228a-a8c4-4540-b8f8-3235ee8e04ee-c000.snappy.parquet.crc  .part-00002-988c9487-d78d-4adc-9ea3-9b8cfa4917a1-c000.snappy.parquet.crc
cwb_bronze_layer/_local_files/_temp_sink/bronze_lakehouse/Tables/claimcenter/initial_load/ready/cc_claim/_delta_log/: .00000000000000000000.json.crc
cwb_bronze_layer/src/bronze_layer/bll/helpers/: guard.py  spark_session.py
cwb_bronze_layer/src/bronze_layer/bll/helpers/cleaning_utils/: normalize_case.py  normalize_naming_conv.py
cwb_bronze_layer/src/bronze_layer/bll/jobs_def/: add_technicals.py  clean_cols_names.py  export_data.py  ingest_data.py  remap_cols_names.py
cwb_bronze_layer/src/bronze_layer/bll/jobs_luncher/: bronze_launch.py
cwb_bronze_layer/src/bronze_layer/cli/: cli.py
cwb_bronze_layer/src/bronze_layer/cli/help_table/: help_table_cli.py
cwb_bronze_layer/src/bronze_layer/dal/: dispatch.py  main.py
cwb_bronze_layer/src/bronze_layer/dal/helpers/: log_writer_init.py  path_resolver.py  toml_fabric_loader.py
cwb_bronze_layer/src/bronze_layer/resources/: bz_config_fabric.toml  bz_config_local.toml
cwb_bronze_layer/src/bronze_layer/resources/config_bz/: configuration.py  execution_configuration.py  observability_configuration.py  rules_configuration.py  storage_configuration.py
cwb_bronze_layer/src/bronze_layer/resources/dictionaries/: bronze_cleaning.json  bronze_rename_map.json
cwb_bronze_layer/tests/: run_tests.py
cwb_bronze_layer/tests/fixtures/Files/landing_zone/initial_load/claimcenter/initial_load/ready/cc_claim/: part-00000-159b06dc-7fae-4a7c-810e-87b267691876-c000.snappy.parquet  part-00001-159b06dc-7fae-4a7c-810e-87b267691876-c000.snappy.parquet  part-00002-159b06dc-7fae-4a7c-810e-87b267691876-c000.snappy.parquet
cwb_bronze_layer/tests/mock_data/fixtures/: mock_load_data.py
dal/: dispatch.py  main.py
(+77 files in other folders)
